[gd_scene load_steps=5 format=3 uid="uid://mih8dc4oko20"]

[ext_resource type="Script" path="res://ui/game_over/game_over.gd" id="1_lg7t4"]
[ext_resource type="FontFile" uid="uid://dy0w61q3bbxhw" path="res://assets/fonts/INVASION2000.TTF" id="2_48845"]
[ext_resource type="AudioStream" uid="uid://bbrjfhcymb1yh" path="res://assets/sound/Big Egg collect 1.wav" id="3_0nc86"]
[ext_resource type="AudioStream" uid="uid://sfxl6vkylxme" path="res://assets/sound/Balloon start riding 2.wav" id="4_1egyd"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lg7t4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48845")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48845")
theme_override_font_sizes/font_size = 15
text = "RESTART"

[node name="WinPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0nc86")

[node name="LosePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1egyd")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
